--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
 }
 
-header, footer{
+header, footer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,9 +17,13 @@ header, footer{
   height: 8vh;
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+}
+
 .container {
   width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +34,7 @@ header, footer{
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
-  margin-top: 20px;
+  margin-top: 30px;
   width: 500px;
   height: 300px;
   border: 5px solid black;
@@ -50,6 +54,7 @@ img {
 }
 
 .search {
+  margin-top: 150px;
   display: flex;
   align-items: center;
 }
@@ -90,7 +95,7 @@ img {
   }
   #pokeball-bg {
     position: absolute;
-    margin-left: 150px;
+    margin-left: 100px;
     width: 220px;
   }
   
